--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "qrcode": "^1.5.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "valid-url": "^1.0.9"
   }
 }
