--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.3",
     "base64-img": "^1.0.4",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
